Fix appearing scrollbar on desktop

--- a/css/styles.css
+++ b/css/styles.css
@@ -107,12 +107,15 @@ body {
 }
 
 @media screen and (min-width: 1113px) {
+    html {
+        height: 100%;
+    }
+
     body {
         background-image: url("../images/bg-pattern-top-desktop.svg"),
             url("../images/bg-pattern-bottom-desktop.svg");
         background-position: top left, bottom right;
         padding: 0;
-        min-height: 100vh;
     }
 
     main {
